--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-calendar": "^3.5.3",
     "@types/react-icons": "^3.0.0",
     "classnames": "^2.3.2",
+    "compose-function": "^3.0.3",
     "dayjs": "^1.11.5",
     "effector": "^22.3.0",
     "effector-react": "^22.3.3",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
     "@types/classnames": "^2.3.1",
+    "@types/compose-function": "^0.0.30",
     "@types/node": "^18.8.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
